Notification system - refactoring for PE